# puzzle

./: .gitignore  CMakeLists.txt  README.docx  README.md  launcher_icon_creator.sh  preinstall.sh  puzzle.sln
AndroidStudio/: build.gradle  local.properties  settings.gradle
AndroidStudio/puzzle/: AndroidManifest.xml  CMakeLists.txt  build.gradle  local.properties
AndroidStudio/puzzle/jni/: Matrix.cpp  camera.h
AndroidStudio/puzzle/jni/puzzle/: print.cpp  solver.cpp  solver.h  utils.cpp  vector.cpp  volumepuzzle.h
AndroidStudio/puzzle/res/values/: strings.xml
AndroidStudio/puzzle/src/com/gittopper/puzzle/: NativeLibrary.java  PuzzleActivity.java  PuzzleView.java
exe/Release/: glut.bat  run.bat
freeglut281/lib/x64/: freeglut.exp  freeglut.lib
freeglut281/lib/x64/Debug/: freeglut.exp  freeglut.ilk  freeglut.lib
freeglut281/lib/x86/: freeglut.exp  freeglut.lib
freeglut281/lib/x86/Debug/: freeglut.exp  freeglut.ilk  freeglut.lib
include/: base.h  bbox.h  box.h  camera.h  geometry.h  glrenderer.h  glutrenderer.h  idrawer.h  intvector.h  mat.h  methods.h  mutex.h  object3d.h  piece.h  pieceshower.h  print.h  puzzle55.h  puzzlepart.h  puzzlepartshower.h  solver.h  threads.h  utils.h  utils3d.h  vector.h  visualization.h  volpart.h  volumepuzzle.h
msvs/: puzzle.sln
msvs/puzzle/: puzzle.vcxproj  puzzle.vcxproj.filters  puzzlepart.cpp
puzzle/: base.h  bbox.h  box.h  geometry.cpp  geometry.h  intvector.cpp  puzzle.vcxproj  puzzle.vcxproj.filters  puzzlepart.h  solver.h  utils.cpp
puzzle/include/: base.h  intvector.h  methods.h  volpart.h
qt/: mainwindow.cpp  mainwindow.h  mainwindow.ui  qt_main.cpp  qt_puzzle.pro  qtpuzzlerenderer.cpp  qtpuzzlerenderer.h  qtpuzzleview.cpp  qtpuzzleview.h  qtsolutionslist.cpp  qtsolutionslist.h  qtvolumepuzzle.cpp  qtvolumepuzzle.h
src/: base.h  bbox.h  box.cpp  box.h  camera.cpp  camera.h  engine.cpp  engine.h  font.cpp  font.h  geometry.cpp  glrenderer.cpp  glutrenderer.cpp  intvector.cpp  irenderer.cpp  irenderer.h  ivolpartrenderer.cpp  ivolpartrenderer.h  logger.hpp  main.cpp  mat.cpp  mat.h  menu.cpp  menu.h  object3d.cpp  piece.cpp  piece.h  pieceshower.cpp  piecessetrenderer.cpp  piecessetrenderer.h  pngreader.cpp  pngreader.h  print.cpp  print.h  puzzle.cpp  puzzle55.h  puzzlepart.cpp  puzzlepartshower.cpp  resourceloader.h  solver.cpp  (+17 more)
src/android/: Matrix.h  Native.cpp  androidresourceloader.cpp  androidresourceloader.h  camera.cpp  camera.h  glesrenderer.cpp  glesrenderer.h  native.cpp  pieceshower.cpp  pieceshower.h  renderer.cpp  renderer.h  volpartrenderer.cpp  volpartrenderer.h
src/desktop/: camera.cpp  camera.h  fileresourceloader.cpp  fileresourceloader.h  glrenderer.cpp  glrenderer.h  glutrenderer.cpp  glutrenderer.h  main.cpp  pieceshower.cpp  pieceshower.h  tests.h  volpartrenderer.cpp  volpartrenderer.h
